# phantom-strike-core

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: core-ci.yml
docs/: contract-smoke.md
scripts/: __init__.py  smoke_contract_decision_operational_lookup.py  smoke_contract_decision_persistence.py  smoke_contract_decision_retrieval.py  smoke_contract_decision_submit.py
src/: app.rs  main.rs
src/config/: mod.rs
src/contracts/: mod.rs  validation.rs
src/domain/: decision.rs  mod.rs  signal.rs
src/errors/: mod.rs
src/http/: response.rs
src/http/handlers/: health.rs  mod.rs  signals.rs  version.rs
src/http/middleware/: trace_context.rs
src/http/routes/: mod.rs
src/observability/: mod.rs
src/services/: mod.rs  signal_decision.rs  signal_ingestion.rs
tests/fixtures/: decision_payload_invalid.json  decision_payload_valid.json
